--- a/dashboard-web-application/client/src/index.css
+++ b/dashboard-web-application/client/src/index.css
@@ -27,3 +27,28 @@ body,
 ::-webkit-scrollbar-track:hover {
   background: #21295c;
 }
+
+
+#board {
+  width: 900px;
+  height: 900px;
+  border: 3px solid darkgray;
+  /* background-color: lightgray; */
+
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+#board div {
+  height: 99px;
+  width: 99px;
+  border: 1px solid;
+
+  /* text */
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
